--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "axios": "^1.7.7",
-    "baileys": "^6.4.1",  // ✅ **Replaced with official npm package**
+    "baileys": "^6.4.1",
     "browser-id3-writer": "^4.4.0",
     "canvas": "^2.11.2",
     "cheerio": "^1.0.0",
@@ -35,7 +35,7 @@
     "jsqr": "^1.4.0",
     "node-fetch": "^2.7.0",
     "node-webpmux": "^3.1.7",
-    "mp3-duration": "^1.1.0",  // ✅ **Updated from 'latest'**
+    "mp3-duration": "^1.1.0",
     "moment": "^2.30.1",
     "pastebin-js": "^1.0.6",
     "pg": "^8.12.0",
@@ -50,4 +50,4 @@
     "stream": "^0.0.3",
     "stream-buffers": "^3.0.2"
   }
-  }
+}
