--- a/app.json
+++ b/app.json
@@ -1,59 +1,62 @@
 {
- "name": "test",
- "logo": "https://avatars.githubusercontent.com/u/176591771?v=4",
- "success_url": "/",
- "stack": "container",
- "env": {
-  "SESSION_ID": {
-   "description": "SESSION ID FOR BOT",
-   "required": true,
-   "value": "Session~"
+  "name": "test",
+  "logo": "https://avatars.githubusercontent.com/u/176591771?v=4",
+  "success_url": "/",
+  "stack": "container",
+  "env": {
+    "PORT": {
+      "description": "Port to run the application",
+      "required": true,
+      "value": "7860"
+    },
+    "SESSION_ID": {
+      "description": "Session ID for bot persistence",
+      "required": true,
+      "value": "Session~"
+    },
+    "BOT_INFO": {
+      "description": "Bot metadata and thumbnail",
+      "required": true,
+      "value": ";https://raw.githubusercontent.com/betingrich4/test/master/media/images/thumb.jpg"
+    },
+    "SUDO": {
+      "description": "Admin phone numbers (comma-separated with country codes)",
+      "required": true,
+      "value": "254740007567,254790375710"
+    },
+    "AUTHOR": {
+      "description": "Default sticker author name",
+      "required": false,
+      "value": "Marisel"
+    },
+    "PACKNAME": {
+      "description": "Default sticker pack name",
+      "required": false,
+      "value": "Test"
+    },
+    "AUTO_READ": {
+      "description": "Enable auto-read messages (true/false)",
+      "required": false,
+      "value": "false"
+    },
+    "RMBG_KEY": {
+      "description": "Remove.bg API key (leave empty to disable)",
+      "required": false,
+      "value": ""
+    }
   },
-  "BOT_INFO": {
-   "description": "BOT INFO",
-   "required": true,
-   "value": ";https://raw.githubusercontent.com/betingrich4/test/master/media/images/thumb.jpg"
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "basic"
+    }
   },
-  "SUDO": {
-   "description": "SUDO NUMBERS",
-   "required": true,
-   "value": "254740007567,254790375710"
-  },
-  "AUTHOR": {
-   "description": "STICKER AUTHOR",
-   "required": false,
-   "value": "Marisel"
-  },
-  "PACKNAME": {
-   "description": "STICKER PACKNAME",
-   "required": false,
-   "value": "Test"
-  },
-  "AUTO_READ": {
-   "description": "AUTO READ MSGS",
-   "required": false,
-   "value": "false"
-  },
-  "RMBG_KEY": {
-   "description": "REMOVE BG KEY",
-   "required": false,
-   "value": ""
-  },
-  "HEROKU_APP_NAME": {
-   "description": "SAME AS ABOVE",
-   "required": true,
-   "value": ""
-  },
-  "HEROKU_API_KEY": {
-   "description": "USED FOR HEROKU VARS",
-   "required": true,
-   "value": ""
-  }
- },
- "formation": {
-  "worker": {
-   "quantity": 1,
-   "size": "basic"
-  }
- }
+  "addons": [
+    {
+      "plan": "heroku-postgresql:hobby-dev",
+      "options": {
+        "version": "13"
+      }
+    }
+  ]
 }
